@@ -1,32 +1,34 @@
 package com.ford.syncV4.proxy.rpc.enums;
 
 public enum VehicleDataType {
-	VEHICLEDATA_GPS,
-	VEHICLEDATA_SPEED,
+    VEHICLEDATA_GPS,
+    VEHICLEDATA_SPEED,
     VEHICLEDATA_RPM,
-	VEHICLEDATA_FUELLEVEL,
-	VEHICLEDATA_FUELLEVEL_STATE,
-	VEHICLEDATA_INSTANTFUELCONSUMPTION,
+    VEHICLEDATA_FUELLEVEL,
+    VEHICLEDATA_FUELLEVEL_STATE,
+    VEHICLEDATA_FUELCONSUMPTION,
     VEHICLEDATA_EXTERNTEMP,
-    VEHICLEDATA_PRNDLSTATUS,
+    VEHICLEDATA_VIN,
+    VEHICLEDATA_PRNDL,
     VEHICLEDATA_TIREPRESSURE,
     VEHICLEDATA_ODOMETER,
     VEHICLEDATA_BELTSTATUS,
-    VEHICLEDATA_BODYINFORMATION,
+    VEHICLEDATA_BODYINFO,
     VEHICLEDATA_DEVICESTATUS,
-    VEHICLEDATA_DRIVERBRAKING,
+    VEHICLEDATA_BRAKING,
     VEHICLEDATA_WIPERSTATUS,
     VEHICLEDATA_HEADLAMPSTATUS,
+    VEHICLEDATA_BATTVOLTAGE,
     VEHICLEDATA_ENGINETORQUE,
-    VEHICLEDATA_ACCPEDALPOSITION,
-    VEHICLEDATA_STEERINGWHEELANGLE,
+    VEHICLEDATA_ACCPEDAL,
+    VEHICLEDATA_STEERINGWHEEL,
 
-    /* Ford Specific Data Items */
-	VEHICLEDATA_ECALLINFO,
-	VEHICLEDATA_AIRBAGSTATUS,
-	VEHICLEDATA_EMERGENCYEVENT,
-	VEHICLEDATA_CLUSTERMODESTATUS,
-	VEHICLEDATA_MYKEY;
+    // ford specific
+    VEHICLEDATA_ECALLINFO,
+    VEHICLEDATA_AIRBAGSTATUS,
+    VEHICLEDATA_EMERGENCYEVENT,
+    VEHICLEDATA_CLUSTERMODESTATUS,
+    VEHICLEDATA_MYKEY;
 
     public static VehicleDataType valueForString(String value) {
         return valueOf(value);
