@@ -1,4 +1,5 @@
 [CW7]
+* SyncProxyAndroid SDK: Update VehicleDataType enum.
 * SyncProxyAndroid SDK: Update FileType enum.
 * SyncProxyAndroid SDK: Add prerecordedSpeech parameter to RegisterAppInterfaceResponse class.
 * Fix 'USB: Application is not recognizable by SDLCore' if the application is closed when the stream is opened.
